--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "http://Wahid-Mujawar.github.io/wahid",
-  "name": "personalportfolio",
+  "name": "personalproject",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
